[tool.poetry]
name = "solidpython"
version = "1.1.3"
description = "Python interface to the OpenSCAD declarative geometry language"
authors = ["Evan Jones <evan_t_jones@mac.com>"]
homepage = "https://github.com/SolidCode/SolidPython"
repository = "https://github.com/SolidCode/SolidPython"
documentation = "https://solidpython.readthedocs.io/en/latest/"
license = "LGPL-2.1"
keywords = [
    "3D", 
    "CAD", 
    "CSG", 
    "constructive solid geometry",
    "geometry",
    "modeling", 
    "OpenSCAD", 
]

classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages=[
    { include = "solid"}
]

[tool.poetry.dependencies]
python = ">=3.7"
euclid3 = "^0.1.0"
pypng = "^0.0.19"
PrettyTable = "=0.7.2"
ply = "^3.11"

[tool.poetry.dev-dependencies]
tox = "^tox 3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
